# color-cli

./: Cargo.toml
src/: main.rs
