[package]
name = "color-cli"
version = "0.1.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
rand = "0.7.3"
clap = { git = "https://github.com/clap-rs/clap/" }
csv = "1.1"